--- a/src/Components/SixteenForecast/SixteenForecast.module.css
+++ b/src/Components/SixteenForecast/SixteenForecast.module.css
@@ -14,4 +14,11 @@
     z-index: 80;
 }
 
+input{
+    margin-right: 10px;
+    border-radius: 7px;
+    padding: 10px 30px 10px 9px;
+    width: 200px;
+    margin-top: 2rem;
+}
 
